Adição do parágrafo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-<head><title> Página de exemplo para o gitHub</title></head>
-<body>
-<h1>Pagina para o git</h1>
-</body>
+  <head><title> Página de exemplo para o gitHub</title></head>
+  <body>
+    <h1>Pagina para o git</h1>
+    <p>Aula de Projeto de Software</p>
+  </body>
 </html>
